# juce-opengl-minimal

./: CMakeLists.txt
src/: AudioProcessor.cc  AudioProcessor.hh  Editor.cc  Editor.hh  GLComponent.cc  GLComponent.hh  MainComponent.cc  MainComponent.hh  MainWindow.cc  MainWindow.hh  StandaloneApp.cc  StandaloneApp.hh
